<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_adverts"
        android:icon="@drawable/ic_adverts"
        android:title="@string/title_adverts"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>

    <item
        android:id="@+id/navigation_add_advert"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add_advert" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chats"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>