<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_main_information_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/colorMainText"
        android:textStyle="bold"
        android:text="@string/settings_main_information_label_text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_change_username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_main_information_label">
        <TextView
            android:id="@+id/settings_change_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorSecondText"
            android:text="@string/settings_change_username_label_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <EditText
            android:id="@+id/settings_change_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/app_half_margin"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="32"
            android:background="@drawable/background_edit_field"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/normal_text"
            app:layout_constraintTop_toBottomOf="@id/settings_change_username_label"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_change_location_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_change_username_container">
        <TextView
            android:id="@+id/settings_change_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorSecondText"
            android:text="@string/settings_change_location_label_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <Spinner
            android:id="@+id/settings_change_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/app_half_margin"
            android:spinnerMode="dropdown"
            android:background="@drawable/background_edit_field"
            app:layout_constraintTop_toBottomOf="@id/settings_change_location_label"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        style="@style/separator"
        android:layout_marginTop="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_change_location_container" />

    <TextView
        android:id="@+id/settings_privacy_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_double_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/colorMainText"
        android:textStyle="bold"
        android:text="@string/settings_privacy_label_text"
        app:layout_constraintTop_toBottomOf="@id/settings_change_location_container"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_change_hidden_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_privacy_label">
        <TextView
            android:id="@+id/settings_change_hidden_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorSecondText"
            android:text="Скрыть номер телефона \nот других пользователей"
            android:singleLine="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <io.ghyeok.stickyswitch.widget.StickySwitch
            android:id="@+id/settings_change_hidden"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            app:ss_animationDuration="600"
            app:ss_iconPadding="14dp"
            app:ss_iconSize="20dp"
            app:ss_leftIcon="@drawable/ic_public"
            app:ss_leftText="виден"
            app:ss_rightIcon="@drawable/ic_private"
            app:ss_rightText="скрыт"
            app:ss_selectedTextSize="@dimen/small_text"
            app:ss_sliderBackgroundColor="@color/colorEditField"
            app:ss_switchColor="@color/colorSecondary"
            app:ss_textColor="@color/colorMainText"
            app:ss_textSize="@dimen/small_text"
            app:ss_animationType="line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        style="@style/separator"
        android:layout_marginTop="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_change_hidden_container" />

    <TextView
        android:id="@+id/settings_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_double_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/colorCancelButton"
        android:textStyle="bold"
        android:text="@string/settings_exit_text"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/settings_change_hidden_container"/>
</androidx.constraintlayout.widget.ConstraintLayout>