<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.registration.EnterPhoneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/enter_phone_brand_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:id="@+id/enter_phone_brand_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_recycle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_half_margin"
            android:textSize="@dimen/large_text"
            android:textColor="@color/colorMainText"
            android:textStyle="bold"
            android:text="@string/app_name"
            app:layout_constraintStart_toEndOf="@id/enter_phone_brand_icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_brand_container"
        app:layout_constraintBottom_toTopOf="@id/enter_phone_next_button">
        <TextView
            android:id="@+id/enter_phone_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text"
            android:textColor="@color/colorMainText"
            android:textStyle="bold"
            android:text="@string/enter_phone_input_label_text"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/enter_phone_hint_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_half_margin"
            android:textSize="@dimen/small_text"
            android:textColor="@color/colorSecondText"
            android:text="Ваш номер телефона будет использоваться \n для входа в аккаунт"
            android:gravity="center"
            android:singleLine="false"
            android:minLines="2"
            app:layout_constraintTop_toBottomOf="@id/enter_phone_input_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/enter_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/app_margin"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:inputType="phone"
            android:typeface="monospace"
            mask:allowed_chars="1234567890"
            mask:mask="+7 ###-###-##-##"
            android:background="@drawable/background_edit_field"
            android:textColor="@color/colorMainText"
            android:textColorHint="@color/colorMainText"
            android:textSize="@dimen/normal_text"
            app:keep_hint="false"
            app:layout_constraintTop_toBottomOf="@id/enter_phone_hint_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/enter_phone_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_margin"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:backgroundTint="@color/colorButton"
            android:textColor="@color/colorPrimary"
            android:radius="10dp"
            android:textAllCaps="false"
            android:text="@string/next_button_text"
            app:layout_constraintBottom_toTopOf="@id/enter_phone_bottom_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/enter_phone_bottom_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?android:attr/actionBarSize"
            android:textSize="@dimen/small_text"
            android:textColor="@color/colorSecondText"
            android:text="Нажимая на ''Далее'', Вы принимаете
            пользовательское соглашение и политику
            конфиденциальности сервиса"
            android:gravity="center"
            android:singleLine="false"
            android:minLines="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
</androidx.constraintlayout.widget.ConstraintLayout>